--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <input type="hidden" name="_captcha" value="false">
         <input type="text" placeholder="Name" required/>
         <input type="email" placeholder="Email" required/>
-        <input type="hidden" name="_next" value="https://lloydmoloantoa.github.io/PizzaPamphlet.html/">
+        <input type="hidden" name="_next" value="https://lloydmoloantoa.github.io/PizzaPamphlet/">
         <textarea placeholder="Message" required></textarea>
         <input type="submit" value="Submit" class="contact-form-btn" />
         <button type="submit">Send</button>
